--- a/app/src/main/res/layout/fragment_post_details.xml
+++ b/app/src/main/res/layout/fragment_post_details.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/post_details_fragment_iv_photo"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dim_220dp"
+        android:scaleType="centerCrop" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/post_details_fragment_iv_photo"
+        android:layout_marginTop="-30dp"
+        android:background="@drawable/shape_grey">
+
+        <ImageView
+            android:id="@+id/post_details_fragment_iv_is_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/dim_16dp"
+            android:layout_marginEnd="@dimen/dim_16dp" />
+
+        <TextView
+            android:id="@+id/post_details_fragment_tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/dim_16dp"
+            android:textColor="@color/txt_color"
+            android:textSize="@dimen/txt_18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/post_details_fragment_tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/post_details_fragment_tv_title"
+            android:layout_margin="@dimen/dim_16dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/txt_18sp" />
+
+    </RelativeLayout>
+</RelativeLayout>
