--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -1,6 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:id="@+id/contact_us_fragment_rel_sub_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/contact_us_fragment_tv_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_8dp"
+                android:text="@string/phone"
+                android:textColor="@color/txt_color"
+                android:textSize="@dimen/txt_20sp" />
+
+            <ImageView
+                android:id="@+id/contact_us_fragment_iv_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_1dp"
+                android:layout_below="@id/contact_us_fragment_tv_phone"
+                android:layout_marginStart="@dimen/dim_4dp"
+                android:layout_marginTop="@dimen/dim_4dp"
+                android:layout_marginEnd="@dimen/dim_4dp"
+                android:background="@color/gray" />
+
+            <TextView
+                android:id="@+id/contact_us_fragment_tv_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_us_fragment_iv_view"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_4dp"
+                android:layout_marginEnd="@dimen/dim_8dp"
+                android:drawableStart="@drawable/ic_mobile_solid"
+                android:drawablePadding="@dimen/dim_8dp"
+                android:text="01270351728"
+                android:textColor="@color/txt_color3"
+                android:textSize="@dimen/txt_18sp" />
+
+            <TextView
+                android:id="@+id/contact_us_fragment_tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_us_fragment_tv_phone_number"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_12dp"
+                android:text="@string/email"
+                android:textColor="@color/txt_color"
+                android:textSize="@dimen/txt_20sp" />
+
+            <ImageView
+                android:id="@+id/contact_us_fragment_iv_view2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_1dp"
+                android:layout_below="@id/contact_us_fragment_tv_email"
+                android:layout_marginStart="@dimen/dim_4dp"
+                android:layout_marginTop="@dimen/dim_4dp"
+                android:layout_marginEnd="@dimen/dim_4dp"
+                android:background="@color/gray" />
+
+            <TextView
+                android:id="@+id/contact_us_fragment_tv_email_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_us_fragment_iv_view2"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_4dp"
+                android:layout_marginEnd="@dimen/dim_8dp"
+                android:drawableStart="@drawable/ic_email_solid"
+                android:drawablePadding="@dimen/dim_8dp"
+                android:text="amrramadan888@gmail.com"
+                android:textColor="@color/txt_color3"
+                android:textSize="@dimen/txt_18sp" />
+
+            <ImageView
+                android:id="@+id/contact_us_fragment_iv_view3"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_1dp"
+                android:layout_below="@id/contact_us_fragment_tv_email_address"
+                android:layout_marginStart="@dimen/dim_4dp"
+                android:layout_marginTop="@dimen/dim_12dp"
+                android:layout_marginEnd="@dimen/dim_4dp"
+                android:background="@color/gray" />
+
+
+            <GridLayout
+                android:id="@+id/contact_us_fragment_grid_social"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_us_fragment_iv_view3"
+                android:layout_marginTop="@dimen/dim_20dp"
+                android:columnCount="2">
+
+
+                <RelativeLayout
+                    android:id="@+id/contact_us_fragment_rel_instagram"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dim_64dp"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@color/instagram"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/dim_32dp"
+                        android:layout_height="@dimen/dim_32dp"
+                        android:src="@drawable/ic_instagram_brands" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/contact_us_fragment_rel_facebook"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dim_64dp"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@color/face"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/dim_32dp"
+                        android:layout_height="@dimen/dim_32dp"
+                        android:src="@drawable/ic_facebook_f_brands" />
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/contact_us_fragment_rel_youtube"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dim_64dp"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@color/youtube"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/dim_32dp"
+                        android:layout_height="@dimen/dim_32dp"
+                        android:src="@drawable/ic_youtube_brands" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/contact_us_fragment_rel_twitter"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dim_64dp"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill_horizontal"
+                    android:background="@color/twitter"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/dim_32dp"
+                        android:layout_height="@dimen/dim_32dp"
+                        android:src="@drawable/ic_twitter_brands" />
+
+                </RelativeLayout>
+
+            </GridLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/contact_us_fragment_til_message_title"
+                style="@style/text_input_orange"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_us_fragment_grid_social"
+                android:layout_marginTop="@dimen/dim_16dp">
+
+                <android.support.design.widget.TextInputEditText
+                    style="@style/text_input_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/message_title"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/contact_us_fragment_til_message_content"
+                style="@style/text_input_orange"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_150dp"
+                android:layout_below="@id/contact_us_fragment_til_message_title"
+                android:layout_marginTop="@dimen/dim_16dp">
+
+                <android.support.design.widget.TextInputEditText
+                    style="@style/text_input_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/message_content"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <Button
+                android:id="@+id/contact_us_fragment_btn_send"
+                style="@style/btn"
+                android:layout_width="@dimen/dim_220dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:layout_below="@id/contact_us_fragment_til_message_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/shape_btn_red"
+                android:text="@string/send"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
+
