--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/login">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:id="@+id/forget_password_fragment_rel_sub_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="@dimen/dim_220dp"
+                android:layout_height="@dimen/dim_220dp"
+                android:layout_above="@+id/forget_password_fragment_tv_forget_password"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/dim_24dp"
+                android:src="@drawable/ic_logo_white" />
+
+            <TextView
+                android:id="@+id/forget_password_fragment_tv_forget_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/forget_password_fragment_til_phone"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/dim_24dp"
+                android:text="@string/forget_password"
+                android:textColor="@color/white"
+                android:textSize="@dimen/txt_20sp" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/forget_password_fragment_til_phone"
+                style="@style/text_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+
+                <android.support.design.widget.TextInputEditText
+                    style="@style/text_input_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/phone"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <Button
+                android:id="@+id/forget_password_fragment_btn_send"
+                style="@style/btn"
+                android:layout_width="@dimen/dim_150dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:layout_below="@id/forget_password_fragment_til_phone"
+                android:layout_centerHorizontal="true"
+                android:text="@string/send" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
