--- a/app/src/main/res/layout/fragment_notification_setting.xml
+++ b/app/src/main/res/layout/fragment_notification_setting.xml
@@ -1,6 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:id="@+id/notification_settings_fragment_rel_sub_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/notification_settings_fragment_tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim_150dp"
+                android:layout_margin="@dimen/dim_8dp"
+                android:background="@drawable/shape_grey_shadow"
+                android:padding="@dimen/dim_8dp"
+                android:textColor="@color/txt_color"
+                android:textSize="@dimen/txt_20sp" />
+
+            <RelativeLayout
+                android:id="@+id/notification_settings_fragment_rel_bloods"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/notification_settings_fragment_tv_title"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_8dp"
+                android:layout_marginEnd="@dimen/dim_8dp">
+
+                <RelativeLayout
+                    android:id="@+id/notification_settings_fragment_rel_bloods_gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim_150dp"
+                    android:layout_marginTop="@dimen/dim_16dp"
+                    android:background="@drawable/shape_et"
+                    android:paddingTop="@dimen/dim_24dp"
+                    android:visibility="gone">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/notification_settings_fragment_rv_blood_types"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </android.support.v7.widget.RecyclerView>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/notification_settings_fragment_rel_blood_types"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim_35dp"
+                    android:background="@drawable/shape_orange">
+
+                    <ImageView
+                        android:id="@+id/notification_settings_fragment_iv"
+                        android:layout_width="@dimen/dim_20dp"
+                        android:layout_height="@dimen/dim_20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dim_12dp"
+                        android:src="@drawable/ic_plus_solid" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dim_12dp"
+                        android:layout_toEndOf="@id/notification_settings_fragment_iv"
+                        android:text="@string/blood_types"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/txt_20sp" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/notification_settings_fragment_rel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/notification_settings_fragment_rel_bloods"
+                android:layout_marginStart="@dimen/dim_8dp"
+                android:layout_marginTop="@dimen/dim_24dp"
+                android:layout_marginEnd="@dimen/dim_8dp">
+
+                <RelativeLayout
+                    android:id="@+id/notification_settings_fragment_rel_governorates_gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim_150dp"
+                    android:layout_marginTop="@dimen/dim_16dp"
+                    android:background="@drawable/shape_et"
+                    android:paddingTop="@dimen/dim_24dp"
+                    android:visibility="gone">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/notification_settings_fragment_rv_governorates"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </android.support.v7.widget.RecyclerView>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/notification_settings_fragment_rel_governorates"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim_35dp"
+                    android:background="@drawable/shape_orange">
+
+                    <ImageView
+                        android:id="@+id/notification_settings_fragment_iv2"
+                        android:layout_width="@dimen/dim_20dp"
+                        android:layout_height="@dimen/dim_20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dim_12dp"
+                        android:src="@drawable/ic_plus_solid" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dim_12dp"
+                        android:layout_toEndOf="@id/notification_settings_fragment_iv2"
+                        android:text="@string/governorates"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/txt_20sp" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/notification_settings_fragment_btn_send"
+                style="@style/btn"
+                android:layout_width="@dimen/dim_220dp"
+                android:layout_height="@dimen/dim_40dp"
+                android:layout_below="@id/notification_settings_fragment_rel"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/shape_orange"
+                android:text="@string/save"
+                android:textColor="@color/white" />
+
+
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
