--- a/app/src/main/res/layout/fragment_rest_password.xml
+++ b/app/src/main/res/layout/fragment_rest_password.xml
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/pin_code"
-                    android:inputType="phone" />
+                    android:inputType="number" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -60,8 +60,7 @@
                     style="@style/text_input_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/new_password"
-                    android:inputType="phone" />
+                    android:hint="@string/new_password"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -76,8 +75,7 @@
                     style="@style/text_input_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/new_password_confirmation"
-                    android:inputType="phone" />
+                    android:hint="@string/new_password_confirmation" />
 
             </android.support.design.widget.TextInputLayout>
 
